--- a/packages/example-next/package.json
+++ b/packages/example-next/package.json
@@ -15,6 +15,7 @@
     "@web3-react/eip1193": "8.0.18-beta.0",
     "@web3-react/empty": "8.0.12-beta.0",
     "@web3-react/metamask": "8.0.19-beta.0",
+    "@web3-react/bitkeep": "8.0.19-beta.0",
     "@web3-react/network": "8.0.18-beta.0",
     "@web3-react/types": "8.0.12-beta.0",
     "@web3-react/url": "8.0.17-beta.0",
