--- a/packages/bitkeep/package.json
+++ b/packages/bitkeep/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "@web3-react/types",
+  "name": "@web3-react/bitkeep",
   "keywords": [
-    "web3-react"
+    "web3-react",
+    "metamask"
   ],
   "author": "Noah Zinsmeister <noahwz@gmail.com>",
   "license": "GPL-3.0-or-later",
@@ -9,7 +10,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "8.0.12-beta.0",
+  "version": "8.0.19-beta.0",
   "files": [
     "dist/*"
   ],
@@ -18,12 +19,15 @@
   "main": "./dist/index.js",
   "exports": "./dist/index.js",
   "scripts": {
-    "prebuild": "rimraf dist",
+    "prebuild": "rm -rf dist",
     "build": "tsc",
     "start": "tsc --watch"
   },
   "dependencies": {
-    "rimraf": "^3.0.2",
-    "zustand": "^4.0.0-beta.3"
+    "@metamask/detect-provider": "^1.2.0",
+    "@web3-react/types": "^8.0.12-beta.0"
+  },
+  "devDependencies": {
+    "@web3-react/store": "^8.0.17-beta.0"
   }
 }
